2005-09-09  Øyvind Kolås  <pippin@freedesktop.org>

	Header cleanup patch from Kouhei Sutou <kou@cozmixng.org>.

	* packages/cairo/ext/rb_cairo_*.h: removed. The
   	  contents of packages/cairo/ext/rb_cairo_*.h are moved to
   	  packages/cairo/ext/rb_cairo.h.
	* packages/cairo/ext/rb_cairo_*.c: include rb_cairo.h instead of
          rb_cairo_*.h, Init_*() declarations are moved ...
   	* packages/cairo/ext/rb_cairo.c: ... here.

2005-09-08  Øyvind Kolås  <pippin@freedesktop.org>

	Integrated patch from Kouhei Sutou <kou@cozmixng.org>.

	* packages/cairo/ext/rb_cairo_exception.h:
	* packages/cairo/ext/rb_cairo_exception.c:
		(rb_cairo_raise_exception),
		(Init_cairo_exception): Added new error types, made exception
		retrieve the status string itself.
	* packages/cairo/ext/rb_cairo_context.c:
		(check_context_status): Simplified exception raising.
	* packages/cairo/ext/rb_cairo_matrix.c:
		(rb_cairo_matrix_copy): create a new matrix when copying.
		(rb_cairo_matrix_invert): do status checking.
		(Init_cairo_matrix): register invert! method.

2005-06-23  Øyvind Kolås  <pippin@freedesktop.org>

	API shakeup, watch out for falling parts.

	* packages/cairo/ext/*.c: large changes, and regressions.
	* packages/cairo/ext/rb_cairo_font.[ch]: removed
	* packages/cairo/ext/rb_cairo_font_face.[ch]: added
	* packages/cairo/lib/cairo.rb:
	* samples/*.rb: removed
	* samples/png.rb: initial test case for new API.
	* README: fixed spelling error.
	* AUTHORS: added Ilmari Heikkinen.

2005-03-21  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/ext/rb_cairo_context.c: Rename methods to eliminate
	abbreviations (following changes in cairo.h):
        cairo_concat_matrix             -> cairo_transform
        cairo_transform_point           -> cairo_user_to_device
        cairo_transform_distance        -> cairo_user_to_device_distance
        cairo_inverse_transform_point   -> cairo_device_to_user
        cairo_inverse_transform_distance-> cairo_device_to_user_distance