@@ -1,0 +1,1 @@
+install_files(["rb_cairo.h"], config('so-dir'), 0555)
